SFUSA/force-app/main/default/objects/Campaign__c/fields/Prioirty_JTBD__c.field-meta.xml
<CustomField>
        <fullName>Prioirty_JTBD__c</fullName>
        <label>Priority (JTBD)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CampaignBrand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Create consumer brand awareness via trial with Auchentoshan cocktails</fullName>
                </value>
                <value>
                    <fullName>Drive brand advocacy among key bartenders via meaningful experiences</fullName>
                </value>
                <value>
                    <fullName>Drive consumer trial through building trade advocacy:Make BH top of mind to influencers &amp; bartenders as the perfect sipping whiskey</fullName>
                </value>
                <value>
                    <fullName>Intercept consumers in their whiskey journey</fullName>
                </value>
                <value>
                    <fullName>Drive BH’s brand equity through targeted BTL-led investment that encourages discovery of the brand</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Win at point of purchase</fullName>
                </value>
                <value>
                    <fullName>Increase perceived value of CC</fullName>
                </value>
                <value>
                    <fullName>Motivate multicultural millennial consumers to buy Courvoisier instead of Hennessy or Remy Martin</fullName>
                </value>
                <value>
                    <fullName>Remind multicultural consumers of Courvoisier’s luxury credentials</fullName>
                </value>
                <value>
                    <fullName>Win at shelf floor and on menu and drive infinity with Cruzan Bucket list program</fullName>
                </value>
                <value>
                    <fullName>Win share of Summer Refreshment stock up by providing additional in market tools for increased visibility with displays and menus and sampling</fullName>
                </value>
                <value>
                    <fullName>Introduce Single Barrel Program during key gifting timeframe and educate bartenders on premium Rum Story</fullName>
                </value>
                <value>
                    <fullName>Hold floor and shelf space and gain menu placements with recipes and cross-merch educational tools for top-10 flavors</fullName>
                </value>
                <value>
                    <fullName>Win share of Cinco &amp; Summer Refreshment stock-up by providing additional in-market tools for increased visibility with displays and menus</fullName>
                </value>
                <value>
                    <fullName>Increase Awareness - Utilize Focus Market Takeovers and Targeted/Experiential Media to reinforce EFFEN as the super premium vodka that doesn’t just follow the status quo</fullName>
                </value>
                <value>
                    <fullName>Get Distribution in the Right Accounts - Leverage expanded size offerings for increased distribution in target accounts</fullName>
                </value>
                <value>
                    <fullName>Premiumize EFFEN - Increase presence in high-end accounts</fullName>
                </value>
                <value>
                    <fullName>Deliver unique, engaging programming and premium advertising to drive consumer awareness and recruit new consumers</fullName>
                </value>
                <value>
                    <fullName>Drive quality across every touchpoint for both consumers and trade to elevate Hornitos and differentiate from Sauza</fullName>
                </value>
                <value>
                    <fullName>GET LDA Millennial guys who are just starting their whiskey journey TO become regular drinkers of Jim Beam White BY making the brand relevant via premium quality credentials</fullName>
                </value>
                <value>
                    <fullName>GET non-Jim Beam consumers open to flavored whiskey TO try Jim Beam flavors portfolio BY tapping into new drinking occasions (refreshments, shots)</fullName>
                </value>
                <value>
                    <fullName>GET current JBW users TO trade up and continue to buy Jim Beam during their bourbon exploration BY introducing them to new premium expressions of Jim Beam</fullName>
                </value>
                <value>
                    <fullName>Fuel local discovery</fullName>
                </value>
                <value>
                    <fullName>Share the KC "Big Flavor" story</fullName>
                </value>
                <value>
                    <fullName>Drive Rye and LTO's</fullName>
                </value>
                <value>
                    <fullName>Recruit new consumers with POP events Laphroaig Select and by expanding the Scotch occasion w/ Penicillin</fullName>
                </value>
                <value>
                    <fullName>Drive brand advocacy by leveraging Simon and the POPs to bring Laphroaig to life for Friends old and new</fullName>
                </value>
                <value>
                    <fullName>Restore Maker's Mark Brand Relevance in US</fullName>
                </value>
                <value>
                    <fullName>Recruit New Loyalists</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>