SFUSA/force-app/main/default/objects/Campaign__c/fields/Program__c.field-meta.xml
<CustomField>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CampaignBrand__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bourbon Legends</fullName>
                </value>
                <value>
                    <fullName>Cinco</fullName>
                </value>
                <value>
                    <fullName>Cocktail Platform</fullName>
                </value>
                <value>
                    <fullName>Crafted for Sipping</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Horseracing</fullName>
                </value>
                <value>
                    <fullName>Iconic Maker's</fullName>
                </value>
                <value>
                    <fullName>M46 Gifting</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Stories from the Still</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Summer Refreshment</fullName>
                </value>
                <value>
                    <fullName>Tailgating</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RETAILER WHISKEY PROGRAM</fullName>
                </value>
                <value>
                    <fullName>CC SUMMER / TENNIS</fullName>
                </value>
                <value>
                    <fullName>CC WINTER/BAD SWEATER</fullName>
                </value>
                <value>
                    <fullName>FIRST POUR SUPPORT</fullName>
                </value>
                <value>
                    <fullName>THE EXCHANGE</fullName>
                </value>
                <value>
                    <fullName>THE PERFECT SERVE</fullName>
                </value>
                <value>
                    <fullName>VISIBILITY</fullName>
                </value>
                <value>
                    <fullName>AGENCY FEES</fullName>
                </value>
                <value>
                    <fullName>CC SPONSORSHIPS/TRIAL</fullName>
                </value>
                <value>
                    <fullName>MEDIA</fullName>
                </value>
                <value>
                    <fullName>MUSIC</fullName>
                </value>
                <value>
                    <fullName>NPD DEVELOPMENT</fullName>
                </value>
                <value>
                    <fullName>POS STORAGE &amp; DISTRIBUTION</fullName>
                </value>
                <value>
                    <fullName>RESEARCH</fullName>
                </value>
                <value>
                    <fullName>SPONSORSHIPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>