SFUSA/force-app/main/default/objects/Campaign__c/fields/Program_Name__c.field-meta.xml
<CustomField>
        <fullName>Program_Name__c</fullName>
        <description>Name of the related program</description>
        <formula>Related_Priority__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </CustomField>