SFUSA/force-app/main/default/objects/Campaign__c/fields/Region_Hidden__c.field-meta.xml
<CustomField>
        <fullName>Region_Hidden__c</fullName>
        <description>Field used for workflow rule that shows different Picklist values based on Marketing Plan.</description>
        <label>Division Hidden</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Brand Education</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central Division</fullName>
                </value>
                <value>
                    <fullName>East Coast Division</fullName>
                </value>
                <value>
                    <fullName>Eastern Control Division</fullName>
                </value>
                <value>
                    <fullName>Florida Division</fullName>
                </value>
                <value>
                    <fullName>Franchise Division</fullName>
                </value>
                <value>
                    <fullName>Global Insights</fullName>
                </value>
                <value>
                    <fullName>Global Marketing</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Mideast Division</fullName>
                </value>
                <value>
                    <fullName>Midsouth Division</fullName>
                </value>
                <value>
                    <fullName>Midwest Division</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Mountain Division</fullName>
                </value>
                <value>
                    <fullName>National Accounts</fullName>
                </value>
                <value>
                    <fullName>National Marketing</fullName>
                </value>
                <value>
                    <fullName>Transportation &amp; Other</fullName>
                </value>
                <value>
                    <fullName>West Coast Division</fullName>
                </value>
                <value>
                    <fullName>Western Control Division</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>