SFUSA/force-app/main/default/objects/Campaign__c/fields/Request_Status_Message__c.field-meta.xml
<CustomField>
        <fullName>Request_Status_Message__c</fullName>
        <label>Request Message</label>
        <type>TextArea</type>
    </CustomField>