SFUSA/force-app/main/default/objects/Campaign__c/fields/SAP_Territory_Abbreviation__c.field-meta.xml
<CustomField>
        <fullName>SAP_Territory_Abbreviation__c</fullName>
        <formula>ParentMarketingPlan__r.SAP_Territory_Abbreviation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Territory Abbreviation</label>
        <type>Text</type>
    </CustomField>