SFUSA/force-app/main/default/objects/Campaign__c/fields/Territory__c.field-meta.xml
<CustomField>
        <fullName>Territory__c</fullName>
        <formula>ParentMarketingPlan__r.Territory__r.Name</formula>
        <label>Territory</label>
        <type>Text</type>
    </CustomField>