SFUSA/force-app/main/default/objects/Campaign__c/fields/Total_Budget_New__c.field-meta.xml
<CustomField>
        <fullName>Total_Budget_New__c</fullName>
        <label>Total Monthly Budget</label>
        <summarizedField>Campaign_Spend__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Campaign_Spend__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Monthly_Budget_AUS</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Campaign_Spend__c.Budget_Month__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Campaign_Spend__c.ParentCampaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>