SFUSA/force-app/main/default/objects/Campaign__c/fields/UnforecastedCampaignBudget__c.field-meta.xml
<CustomField>
        <fullName>UnforecastedCampaignBudget__c</fullName>
        <description>Campaign Budget - Forecasted Campaign Budget.</description>
        <formula>PlannedCampaignSpend__c  - ForecastedCampaignSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Campaign Budget - Forecasted Campaign Budget.</inlineHelpText>
        <label>Unforecasted Campaign Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>