SFUSA/force-app/main/default/objects/Campaign__c/fields/WBSCode__c.field-meta.xml
<CustomField>
        <fullName>WBSCode__c</fullName>
        <label>WBS Code</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>