SFUSA/force-app/main/default/objects/Campaign__c/recordTypes/Australia_Campaign_WBS.recordType-meta.xml
<RecordType>
        <fullName>Australia_Campaign_WBS</fullName>
        <active>true</active>
        <description>Used for Creation of an Australian Campaign (WBS)</description>
        <label>Australia Campaign (WBS)</label>
    </RecordType>