SFUSA/force-app/main/default/objects/Campaign__c/recordTypes/Child_Campaign.recordType-meta.xml
<RecordType>
        <fullName>Child_Campaign</fullName>
        <active>true</active>
        <description>Record type for new child campaign records</description>
        <label>Child Campaign</label>
    </RecordType>